--add-exports needed for self signed certificated under Java 17